# calibre_annas_archive

./: .gitignore  README.md  __init__.py  annas_archive.py  config.py  constants.py  plugin-import-name-store_annas_archive.txt  pyproject.toml  zip_release.sh
debug/: README.md  debug_scraping.py  verify_circuit_breaker.py
tests/: test_fast_filter.py  test_search_layout.py
